feat: fix body wording, link to cv

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,20 @@
     <div class="flex grid h-screen m-auto lg:grid-cols-2">
       <!-- intorduction -->
       <div class="m-auto space-y-5 text-base">
-        <span class="text-xl">Hello, there<br>
-          I’m <span class="text-5xl font-bold">Widi Afandi 👋</span>
+        <span class="text-xl">
+          Hello there, I'm ...<br>
+          <span class="text-5xl font-bold">Widi Afandi 👋</span>
         </span>
-        <p>a freshgraduate student of Informatics Engineering.</p>
+        <p>a Data Engineer with 3+ years of experience.</p>
         <p>
-          I’m focus in field of data like <span class="font-bold">data science, machine learning,</span> and <span class="font-bold">deep learning.</span>
-          Ah and one more, I’m currently learn about mobile development using <span class="font-bold">Flutter Framework.</span>
+          Focus on data engineering things like 
+          <span class="text-sky-500">Automation, Data Warehousing, Data Orchestration, MLOps, Databases, </span>
+          and <span class="text-sky-500">Data Quality.</span>
+          I also can make <span class="text-sky-500">dashboards</span> with full insight 
+          and some <span class="text-sky-500">AI (LLM, RAG)</span> things to makes our live easier than ever.
         </p>
         <p>
-          Wanna see my curriculum vitae? click here
+          Wanna see my curriculum vitae? <a href="https://drive.google.com/file/d/1I7C3jQ9wg26OJZswmgCdkRU_0xPIPJr8/view?usp=sharing" class="hover:text-cyan-400" target="_blank">click here!</a>
         </p>
       </div>
       <!-- social media -->
